Created console program to generate API

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,8 +1,10 @@
 parserOptions:
   ecmaVersion: 2018
+  sourceType: module
 
 env:
   es6: true
   node: true
+  commonjs: true
 
 extends: 'htmlacademy/node'
